--- a/templates/planner/childEntries.html
+++ b/templates/planner/childEntries.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{% static 'css/dashboard.css' %}?v=3">
 <link rel="stylesheet" href="{% static 'css/dashboard-scroll.css' %}">
 <script src="{% static 'js/clean-swipe.js' %}?v=1" defer></script>
+<script src="{% static 'js/edit-delete-functions.js' %}" defer></script>
 
 <style>
     .force-visible {
